# api-frame

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
data/repo/: BUILD.bazel  flat_one_to_many.go  repo.go
gateway/http/middleware/: BUILD.bazel  cloudflare_access_jwt.go  cors.go  firebase_jwt_auth.go
grpc/interceptor/bugsnag/: BUILD.bazel  interceptor.go
provider/: BUILD.bazel  firebase.go
service/data/repo/: BUILD.bazel  firestore_query_mutate.go  flat_one_to_many.go  helper.go  options.go  query_mutate.go  repo.go
service/data/storage/: BUILD.bazel  flat_one_to_many.go  option.go  storage.go  table.go
service/data/storage/field/: BUILD.bazel  type.go
service/data/storage/internal/helper/: BUILD.bazel  helper.go
service/data/storage/internal/query/: BUILD.bazel  firebase_query_customize.go  mysql_query_customize.go
service/data/storage/query/: BUILD.bazel  customize.go  option.go
service/identity/: BUILD.bazel  access_control.go  access_control_enforcer.go
