load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "flat_one_to_many.go",
        "repo.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/api-frame/data/repo",
    visibility = ["//visibility:public"],
    deps = ["@com_google_cloud_go_firestore//:firestore"],
)
