load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "cors.go",
        "firebase_jwt_auth.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/api-frame/gateway/http/middleware",
    visibility = ["//visibility:public"],
    deps = ["//provider"],
)

alias(
    name = "go_default_library",
    actual = ":middleware",
    visibility = ["//visibility:public"],
)
