load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "cloudflare_access_jwt.go",
        "firebase_jwt_auth.go",
    ],
    importpath = "github.com/innovation-upstream/api-frame/gateway/http/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//provider",
        "@com_github_coreos_go_oidc//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":middleware",
    visibility = ["//visibility:public"],
)
