load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bugsnag",
    srcs = ["interceptor.go"],
    importpath = "github.com/innovation-upstream/api-frame/grpc/interceptor/bugsnag",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bugsnag_bugsnag_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":bugsnag",
    visibility = ["//visibility:public"],
)
