load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "firestore_query_mutate.go",
        "flat_one_to_many.go",
        "helper.go",
        "options.go",
        "query_mutate.go",
        "repo.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/api-frame/service/data/repo",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_firestore//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":repo",
    visibility = ["//visibility:public"],
)
