load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "helper",
    srcs = ["helper.go"],
    importpath = "github.com/innovation-upstream/api-frame/service/data/storage/internal/helper",
    visibility = ["//service/data/storage:__subpackages__"],
    deps = [
        "@com_google_cloud_go_firestore//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":helper",
    visibility = ["//service/data/storage:__subpackages__"],
)
